--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/neumorphism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,10 +28,25 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div class="app">
+    <div class="form-group main">
+      <label for="search-input">Icon Right</label>
+      <div class="input-group mb-4">
+        <input class="form-control" id="search-input" placeholder="请输入搜索内容" aria-label="Input group" type="text">
+        <div class="input-group-append">
+          <span class="input-group-text"><span class="fas fa-search"></span></span>
+        </div>
+      </div>
+      <div class="search-button">
+        <button class="btn btn-primary btn-pill text-dark mr-2 mb-2 animate-down-2" type="button">Search</button>
+      </div>
+    </div>
+  </div>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/js/fontawesome.min.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
