Feat: Add google search function

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="zh">
 
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="search-button">
-        <button class="btn btn-primary btn-pill text-dark mr-2 mb-2 animate-down-2" type="button">Search</button>
+        <button class="btn btn-primary btn-pill text-dark mr-2 mb-2 animate-down-2" type="button" id="search-button">Search</button>
       </div>
     </div>
   </div>
