--- a/index.html
+++ b/index.html
@@ -26,12 +26,20 @@
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
   <div class="app">
+    <div class="logo">
+        <div class="text-center">
+          <div class="icon icon-shape shadow-soft border border-light rounded-circle">
+            <span class="far fa-thumbs-up"></span>
+          </div>
+          <h3 class="h5 my-3">Shell Search</h3>
+      </div>
+    </div>
     <div class="form-group main">
-      <label for="search-input">Icon Right</label>
       <div class="input-group mb-4">
+        <div class="input-group-prepend">
+          <span class="input-group-text"><span class="fab fa-google"></span></span>
+        </div>
         <input class="form-control" id="search-input" placeholder="请输入搜索内容" aria-label="Input group" type="text">
         <div class="input-group-append">
           <span class="input-group-text"><span class="fas fa-search"></span></span>
