--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3 class="h2 my-3">Shell Search</h3>
       </div>
     </div>
-    <div class="form-group main">
+    <div class="form-group">
       <div class="input-group mb-4">
         <div class="input-group-prepend">
           <span class="input-group-text"><span class="fab fa-google"></span></span>
