Feat: Add like button click event

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div></div>
     <div></div>
     <div class="like-button">
-      <button class="btn btn-primary btn-pill animate-left-3" type="button">
+      <button class="btn btn-primary btn-pill animate-left-3" type="button" id="like-button">
         <span class="fas fa-heart"></span>
         GitHub
       </button>
