--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 <body>
 <div class="app">
   <div class="header">
-    <div></div>
-    <div></div>
     <div class="like-button">
       <button class="btn btn-primary btn-pill animate-left-3" type="button" id="like-button">
         <span class="fas fa-heart"></span>
@@ -46,7 +44,7 @@
         <h3 class="h2 my-3">Shell Search</h3>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group container">
       <div class="input-group mb-4">
         <div class="input-group-prepend">
           <span class="input-group-text"><span class="fab fa-google"></span></span>
