--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>New Page, New Life</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
+  <meta property="og:title" content="New Page">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://newpage.futurefog.com">
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
@@ -19,8 +19,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/neumorphism.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/fontawesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/fontawesome.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -41,7 +41,7 @@
         <div class="icon icon-shape shadow-soft border border-light rounded-circle">
           <span class="far fa-thumbs-up"></span>
         </div>
-        <h3 class="h2 my-3">Shell Search</h3>
+        <h3 class="h2 my-3">New Page Search</h3>
       </div>
     </div>
     <div class="form-group container">
@@ -66,7 +66,7 @@
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/js/fontawesome.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/js/fontawesome.min.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
